--- a/website/src/pages/motivation.mdx
+++ b/website/src/pages/motivation.mdx
@@ -28,6 +28,8 @@ Both of these are called a "tippy" when using Tippy.js!
 
 **Size: 5.5 KB (core)** (including Popper: 12.8 KB)
 
+> **Note**
+>
 > (core) means the core JS & CSS. If importing more themes, animations, plugins,
 > or addons, the size will increase.
 
